--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "docs/source/sub2"]
-	path = docs/source/sub2
-	url = https://github.com/SuhaylZhao/sub2
+[submodule "docs/source/freenove_Kit"]
+	path = docs/source/freenove_Kit
+	url = https://github.com/Vegetable-SYC/freenove_Kit
