--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -34,6 +34,7 @@ pytz==2022.1
     # via babel
 requests==2.32.3
     # via sphinx
+recommonmark==0.7.1
 snowballstemmer==2.2.0
     # via sphinx
 sphinx==8.1.3
