--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,12 @@
 name: rtd38
 channels:
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
   - rasterio==1.2
-  - python=3.7
-  - pytorch-cpu=1.7
+  - python=3.6
+  - pytorch-cpu=1.7.1
   - pip>=20.1  # pip is needed as dependency
   - pip:
     - black==20.8b1
