--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - rasterio==1.2
   - python=3.6
-  - pytorch-cpu=1.7.1
+  - torch=1.7.1
   - pip>=20.1  # pip is needed as dependency
   - pip:
     - black==20.8b1
